--- a/Karlo/Seminar_v0.2/src/main/resources/templates/admin/myprofile.html
+++ b/Karlo/Seminar_v0.2/src/main/resources/templates/admin/myprofile.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>User Page</title>
+    <title>admin Page</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -18,10 +18,10 @@
 
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <div th:replace="fragments/user/navigation_bar :: navBrand"></div>
+        <div th:replace="fragments/admin/navigation_bar :: navBrand"></div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <div th:replace="fragments/user/navigation_bar :: logo"></div>
-            <div th:replace="fragments/user/navigation_bar :: navList"></div>
+            <div th:replace="fragments/admin/navigation_bar :: logo"></div>
+            <div th:replace="fragments/admin/navigation_bar :: navList"></div>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <div th:replace="fragments/any/navigation :: back"></div>
@@ -35,18 +35,28 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">
-                            <strong>This cannot be undone easily!</strong>
-                            <br>Are you sure, <span th:utext="${userName}"></span>?
-                        </h5>
-                        <form th:action="@{/user/delprofile/deleteUser}" method="post" class="form-inline my-2 my-lg-0">
-                            <input type="text" min="3" id="delete" name="delete" class="form-control" aria-describedby="delHelp"
-                                placeholder="Write YES to confirm">
-                            <button class="btn btn-danger" type="submit">Submit</button>
-                            <small id="delHelp" class="form-text text-muted">
-                                Your account can still be recovered, you will need to contact one of our admins
-                                by email so they can recover it</small>
-                        </form>
+                        <h5 class="card-title">Name</h5>
+                        <p class="card-text"><span th:utext="${userName}"></span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Last name</h5>
+                        <p class="card-text"><span th:utext="${userLastName}"></span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">E-mail</h5>
+                        <p class="card-text"><span th:utext="${userEmail}"></span></p>
                     </div>
                 </div>
             </div>
