--- a/Karlo/Seminar_v0.2/src/main/resources/templates/fragments/any/navigation.html
+++ b/Karlo/Seminar_v0.2/src/main/resources/templates/fragments/any/navigation.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Admin home</title>
+    <title>All users</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -17,35 +17,17 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <div th:replace="fragments/admin/navigation_bar :: navBrand"></div>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <div th:replace="fragments/admin/navigation_bar :: logo"></div>
-            <div th:replace="fragments/admin/navigation_bar :: navList"></div>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <div th:replace="fragments/any/navigation :: logout"></div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <!--                End nav bar             -->
-    <div class="container">
-
-        <div class="panel-group" style="margin-top:40px">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <span th:utext="${userName}"></span>
-                </div>
-                <div class="panel-body">
-                    <img th:src="@{/images/bozic.jpg}" class="img-responsive center-block" width="400" height="400" alt="Beer" />
-                </div>
-
-            </div>
-        </div>
-
+    <div th:fragment="logout">
+        <form th:action="@{/logout}" method="get" class="nav-item form-inline ml-auto">
+            <button class="btn btn-outline-danger btn-sm" type="submit">Sign out</button>
+        </form>
     </div>
+    <div th:fragment="back">
+        <form th:action="@{/user/home}" method="get" class="form-inline my-2 my-lg-0">
+            <button class="btn btn-outline-success btn-sm" type="submit">Back</button>
+        </form>
+    </div>
+
 </body>
 
 </html>
