--- a/Karlo/Seminar_v0.2/src/main/resources/templates/user/myprofile.html
+++ b/Karlo/Seminar_v0.2/src/main/resources/templates/user/myprofile.html
@@ -17,56 +17,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <div th:replace="fragments/user/navigation_bar :: navBrand"></div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" th:href="@{/user/home}">
-                <img th:src="@{/images/logo.png}" width="50" height="50">
-            </a>
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <form th:action="@{/user/mybills}" method="get" class="form-inline my-2 my-lg-0">
-                        <button class="btn btn-outline-success" type="submit">My bills</button>
-                    </form>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Profile management
-                    </button>
-                    <div class="dropdown-menu">
-                        <form th:action="@{/user/myprofile}" method="get">
-                            <div class="form-group">
-                                <button class="btn btn-block btn-light" type="submit">My profile</button>
-                            </div>
-                        </form>
-                        <form th:action="@{/user/editprofile}" method="get">
-                            <div class="form-group">
-                                <button class="btn btn-block btn-space btn-light" type="submit">Edit profile</button>
-                            </div>
-                        </form>
-                        <form th:action="@{/user/delprofile}" method="get">
-                            <div class="form-group">
-                                <button class="btn btn-block btn-space btn-danger" style="opacity: 0.35" type="submit">Delete
-                                    profile</button>
-                            </div>
-                        </form>
-                    </div>
+            <div th:replace="fragments/user/navigation_bar :: logo"></div>
+            <div th:replace="fragments/user/navigation_bar :: navList"></div>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <div th:replace="fragments/any/navigation :: back"></div>
                 </li>
             </ul>
         </div>
-
-        <form th:action="@{/user/home}" method="get" class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-success btn-sm" type="submit">Back</button>
-        </form>
     </nav>
+    <!--                End nav bar             -->
 
-        <!--                End nav bar             -->
-        
     <div class="container pt-5">
         <div class="row">
             <div class="col-sm-6">
