--- a/Karlo/Seminar_v0.2/src/main/resources/templates/admin/editprofile.html
+++ b/Karlo/Seminar_v0.2/src/main/resources/templates/admin/editprofile.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div th:replace="fragments/admin/navigation_bar :: navBrand"></div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <div th:replace="fragments/admin/navigation_bar :: logo"></div>
