--- a/Karlo/Seminar_v0.2/src/main/resources/templates/admin/home.html
+++ b/Karlo/Seminar_v0.2/src/main/resources/templates/admin/home.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div th:replace="fragments/admin/navigation_bar :: navBrand"></div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <div th:replace="fragments/admin/navigation_bar :: logo"></div>
@@ -31,20 +31,11 @@
     </nav>
 
     <!--                End nav bar             -->
-    <div class="container">
-
-        <div class="panel-group" style="margin-top:40px">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <span th:utext="${userName}"></span>
-                </div>
-                <div class="panel-body">
-                    <img th:src="@{/images/bozic.jpg}" class="img-responsive center-block" width="400" height="400" alt="Beer" />
-                </div>
-
-            </div>
+    <div class="jumbotron jumbotron-fluid bg-light">
+        <div class="container">
+            <h4 class="display-4">Administration Control Panel</h4>
+            <p class="lead">Logged in as: <span th:utext="${userName}"></span></p>
         </div>
-
     </div>
 </body>
 
