--- a/Karlo/Seminar_v0.2/src/main/resources/templates/registration.html
+++ b/Karlo/Seminar_v0.2/src/main/resources/templates/registration.html
@@ -53,6 +53,12 @@
                             class="validation-message"></label>
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-sm-9">
+                        <input type="password" th:name="passTwo" placeholder="Repeat Password" class="form-control" /> <label th:if="${#fields.hasErrors('password')}"
+                            th:errors="*{password}" class="validation-message"></label>
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <div class="col-sm-9">
