--- a/Karlo/Seminar_v0.2/src/main/resources/templates/user/home.html
+++ b/Karlo/Seminar_v0.2/src/main/resources/templates/user/home.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div th:replace="fragments/user/navigation_bar :: navBrand"></div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <div th:replace="fragments/user/navigation_bar :: logo"></div>
@@ -31,29 +31,11 @@
     </nav>
     <!--                End nav bar             -->
 
-    <div class="container">
+    <div class="jumbotron jumbotron-fluid bg-light">
+        <div class="container">
+            <h4 class="display-4">Welcome <span th:utext="${userName}"></span></h4>
 
-        <div class="panel-group" style="margin-top:40px">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <table>
-                        <tbody>
-                            <tr th:each="role: ${roles}">
-                                <td><span th:text="${role.id}">as</span></td>
-                                <td><span th:text="${role.role}">asdf</span></td>
-
-                            </tr>
-                        </tbody>
-                    </table>
-
-                </div>
-                <div class="panel-body">
-                    <img th:src="@{/images/bozic.jpg}" class="img-responsive center-block" width="400" height="400" alt="Beer" />
-                </div>
-
-            </div>
         </div>
-
     </div>
 </body>
 
